--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,11 +1,11 @@
 .body {
   background-color: #242424;
-  padding: 5px;
-  min-height: 100vh;
-  min-width: 100vw;
+  /* padding: 5px; */
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   overflow: hidden;
 }
